# watersync

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  REFACTORING_AUDIT.md  REFACTORING_IMPLEMENTATION.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  future_soft_delete_implementation.md  just.sh  just_migrate.sh  manage.py  pyproject.toml
.devcontainer/: bashrc.override.sh  devcontainer.json
.envs/.local/: .django  .postgres
.github/: copilot-instructions.md
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/parameters/: water_quality.yaml
config/settings/: base.py  local.py  production.py  test.py
config/units/: water_quality_units.txt
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/docs/: faq.md  filters.md  forms.md  lists.md  overview-templates.md  track-code-reduction.md  units.md  urls.md
docs/docs/developer/: code-documentation.md  code_review.md  data_mutation_strategy.md  refactoring_status.md
docs/docs/generic-templates/: base-templates.md  detail.md  docstrings.md  lists.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
tests/: test_units.py
watersync/: __init__.py  conftest.py
watersync/_templates/: README.md  base.html  base_landing.html  confirm_delete.html  detail.html  list.html  list_page.html  project_dashboard.html  table.html
watersync/_templates/core/: bulk_fieldwork_form.html  bulk_fieldwork_preview.html  fieldwork_detail.html  fieldwork_list.html  fieldwork_overview.html  location_detail.html  location_overview.html  location_overview_acordeon.html  location_resources.html  project_detail.html  project_overview.html
watersync/_templates/groundwater/: gwl_list.html
watersync/_templates/layouts/: base_dashboard.html  base_landing.html  partial.html  project_dashboard.html
watersync/_templates/pages/: home.html
watersync/_templates/sensor/: README  deployment_detail.html  record_form.html
watersync/_templates/shared/: detail_list.html  form.html  form_detail.html  hamster.html  history_card.html  list_detail.html  list_history.html  pagination.html  simple_form.html  table.html  user_list.html
watersync/_templates/users/: approval_pending.html  user_detail.html  user_form.html
watersync/_templates/waterquality/: README  bulk_measurement_form.html  bulk_preview.html  sample_detail.html  sample_overview.html  samplingevent_detail.html
watersync/core/: README  __init__.py  admin.py  apps.py  config.py  context_processors.py  forms.py  forms_detail.py  managers.py  middleware.py  mixins.py  models.py  models_detail.py  parsers.py  permissions.py  urls.py  views.py
watersync/core/api/: serializers.py  views.py
watersync/core/fixtures/: fieldwork.yaml  project.yaml  units.json
watersync/core/generics/: base.py  context.py  decorators.py  filters.py  forms.py  htmx.py  interfaces.py  managers.py  mixins.py  model_setup.py  models.py  querysets.py  utils.py  views.py
watersync/core/migrations/: 0001_initial.py  0002_alter_fieldwork_options_remove_fieldwork_created_and_more.py  0002_initial.py  0002_rename_location_project_geom.py  0003_alter_locationstatus_location.py  0003_remove_historicalproject_is_active_and_more.py  0004_lakedetail_piezometerdetail_precipitationdetail_and_more.py  0004_remove_location_created_at_and_more.py  0005_alter_locationvisit_location.py  0006_alter_locationvisit_location.py  0007_alter_fieldwork_project_and_more.py  0008_remove_fieldwork_created_at_and_more.py  0009_remove_fieldwork_user_fieldwork_users.py  0010_alter_fieldwork_options_alter_location_options_and_more.py  0011_historicallocation.py  0012_alter_project_geom.py  0013_alter_project_geom.py  0014_project_geom_poly.py  0015_remove_project_geom_poly_alter_project_geom.py  0016_rename_users_fieldwork_user.py  0017_alter_locationvisit_fieldwork.py  0018_rename_added_by_historicallocation_user_and_more.py  0019_alter_project_options_remove_project_created_at_and_more.py  0020_delete_historicallocation.py  0021_historicallocation.py  0022_rename_comment_fieldwork_description_and_more.py  0023_locationvisit_slug.py  0024_alter_locationvisit_slug.py  0025_remove_locationvisit_slug_locationvisit_date.py  0026_alter_locationvisit_date.py  0027_unit.py  0028_remove_locationvisit_date_and_more.py  0029_alter_fieldwork_weather.py  0030_remove_historicallocation_user_remove_location_user.py  0031_alter_fieldwork_date_alter_locationvisit_status.py  0032_remove_historicallocation_created_and_more.py  0033_alter_project_options_remove_project_created_and_more.py  0034_historicalproject.py  0035_alter_fieldwork_user.py  0036_historicallocation_decommision_date_and_more.py  (+3 more)
watersync/core/templatetags/: __init__.py  custom_tags.py  modals.py
watersync/core/tests/: __init__.py  factories.py  test_views.py
watersync/core/views/: base.py  fieldwork.py  location.py  locationstatus.py  locationvisit.py  project.py
watersync/groundwater/: README  admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
watersync/groundwater/migrations/: 0001_initial.py  0002_alter_gwlmanualmeasurement_options_and_more.py  (+9 more)
watersync/sensor/: admin.py  apps.py  filters.py  forms.py  forms_detail.py  models.py  models_detail.py  plotting.py  tests.py  urls.py  views.py
watersync/templates/: _delete_confirmation_modal.html  base.html  base_dashboard.html  base_landing.html  confirm_delete.html  project_dashboard.html
watersync/users/: adapters.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
watersync/utils/: get_objects.py
watersync/waterquality/: admin.py  apps.py  filters.py  forms.py  forms_setup.py  models.py  models_setup.py  parsers.py  tests.py  urls.py  utils.py  validators.py  views.py
(+185 files in other folders)
