# =============================================================================
# WaterSync - Django Hydrological Data Management Platform
# =============================================================================
# This is a standard PEP 621 pyproject.toml.
# Dependencies are installed via `uv pip install -e ".[dev]"` in Docker.
# =============================================================================

[project]
name = "watersync"
version = "1.0.0"
description = "Django-based hydrological data management platform"
authors = [{ name = "WaterSync Team" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }

# =============================================================================
# Core Dependencies
# =============================================================================
dependencies = [
    # Python utilities
    "python-slugify>=8.0.4",
    "pillow>=10.4.0",
    "argon2-cffi>=23.1.0",
    "whitenoise>=6.7.0",
    
    # Redis & Celery
    "redis>=5.0.8",
    "hiredis>=3.0.0",
    "celery>=5.4.0,<6.0",
    "django-celery-beat>=2.6.0",
    "flower>=2.0.1",
    
    # ASGI server
    "uvicorn[standard]>=0.30.6",
    "uvicorn-worker>=0.2.0",
    
    # Data processing
    "pandas>=2.2.2",
    "plotly>=5.23.0",
    "docstring-parser>=0.16",
    "pint>=0.24.4",
    
    # Django core
    "django>=5.0.8,<5.1",
    "django-environ>=0.11.2",
    "django-model-utils>=4.5.1",
    "django-allauth[mfa]>=65.9.0",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.2",
    "django-bootstrap-datepicker-plus>=5.0.5",
    "django-redis>=5.4.0",
    "django-simple-history>=3.8.0",
    "django-htmx>=1.23.0",
    "fido2>=2.0.0",
    "django-unfold>=0.36.0",
    "django-leaflet>=0.30.1",
    "django-jsonform>=2.22.0",
    
    # Django REST Framework
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.4.0",
    "drf-spectacular>=0.27.2",
    
    # Database (psycopg with binary for easier install)
    "psycopg[binary]>=3.2.1",
]

# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
dev = [
    # Development tools
    "werkzeug[watchdog]>=3.0.3",
    "ipdb>=0.13.13",
    "watchfiles>=0.21.0",
    
    # Testing
    "mypy>=1.11.1",
    "django-stubs[compatible-mypy]>=5.0.4",
    "pytest>=8.3.2",
    "pytest-sugar>=1.0.0",
    "pytest-django>=4.8.0",
    "djangorestframework-stubs>=3.15.0",
    "factory-boy>=3.3.0",
    "coverage>=7.6.1",
    "django-coverage-plugin>=3.1.0",
    
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    
    # Code quality
    "ruff>=0.6.1",
    "djlint>=1.34.1",
    "pre-commit>=3.8.0",
    
    # Django dev tools
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
]

prod = [
    "gunicorn>=23.0.0",
    "sentry-sdk>=2.13.0",
    "django-anymail[sendgrid]>=11.1",
    # Use C-optimized psycopg in production (requires libpq-dev)
    "psycopg[c]>=3.2.1",
]

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watersync"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = ["watersync", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests", "watersync"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["watersync"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "staticfiles",
    ".venv",
]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# =============================================================================
# DjLint Configuration
# =============================================================================
[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
ignore = "H006,H030,H031"
format_css = true
format_js = true
